# trafficModel

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  TrafficModel.pro
include/: Bus.h  Car.h  CarFactory.h  Interface.h  MainWindow.h  PedSystem.h  TrafficLight.h  TrafficLightSystem.h  TrafficPath.h  TrafficPathPoint.h
resources/: resource.qrc
scripts/: compile.sh  doxygen.sh  tests.sh
sources/: Bus.cpp  Car.cpp  CarFactory.cpp  MainWindow.cpp  MainWindow.ui  PedSystem.cpp  TrafficLight.cpp  TrafficLightSystem.cpp  TrafficPath.cpp  TrafficPathPoint.cpp  main.cpp
tests/: tests.cpp
